# sjkscan

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  TODO.md  pyproject.toml  requirements.txt  scan.py  scand.py  setup.py  sjkscan.conf  sjkscan.py  update_version.sh
docs/: Makefile  conf.py  index.rst  make.bat  sjkscan.rst
docs/_build/doctrees/: environment.pickle  index.doctree  sjkscan.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sjkscan.html
docs/_build/html/_modules/: index.html  sjkscan.html
sjkscan/: config.py  logger.py  logging.py  postprocessing.py  scan.py  sjkscan.conf  sjkscan.py  utils.py
tests/: tests_imagemagick.py  tests_scanimage.py  tests_utils.py
