[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sjkscan"
dynamic = ["version"]
readme = "README.rst"
license = {text = "BSD"}
authors = [
    { name = "Svante Kvarnström", email = "sjk@sjk.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
scan = "sjkscan.scan:main"
scand = "sjkscan.postprocessing:main"

[project.urls]
Homepage = "https://github.com/sjktje/sjkscan/"
Documentation = "https://sjkscan.readthedocs.io/"

[tool.hatch.version]
path = "sjkscan/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sjkscan",
]
